# predictoor-bot

./: .gitignore  README.md  pyproject.toml
src/predictoor_bot/: __init__.py  cli.py  config.py
src/predictoor_bot/backend/: errors.py  mock_backend.py  pdr_backend_adapter.py  protocol.py
tests/: test_backend_contract.py  test_cli_import.py  test_config.py  test_pdr_backend_adapter_missing.py
