[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictoor-bot"
version = "0.0.0"
description = "Predictoor bot (skeleton)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = []





[project.scripts]
predictoor-bot = "predictoor_bot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.8",
  "pdr-backend @ git+https://github.com/xopsio/pdr-backend.git@v0.0.15-stopit-removed",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py312"


